# wasm-tools-component-repro

./: .gitmodules  Cargo.toml  README.md  run.ps1  run.sh  test.wit
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
