[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = [
    "component-model",
] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }
